[gd_scene load_steps=18 format=2]

[ext_resource path="res://src/Objects/Camera/camera.png" type="Texture" id=1]
[ext_resource path="res://src/Objects/Camera/Camera.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Poppins-Medium.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/Objects/Detection_marker/Detection_marker.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=13]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 136, 64 )

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 540, 160, 90 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 360, 160, 90 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 450, 160, 90 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 270, 160, 90 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 180, 160, 90 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 160, 90 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 90, 160, 90 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "armor_off",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "armor_on",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "default_broken",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "default_off",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default_on",
"speed": 1.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 76, 48 )

[sub_resource type="DynamicFont" id=11]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=12]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="Camera_right" type="Node2D" groups=["Camera", "Detection"]]
script = ExtResource( 2 )

[node name="Marker" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -150 )
z_index = 10

[node name="Detection_bar" type="ProgressBar" parent="."]
margin_left = -105.0
margin_top = -75.0
margin_right = 105.0
margin_bottom = -52.0
custom_fonts/font = SubResource( 13 )
step = 1.0
rounded = true

[node name="Interaction_hitbox" type="Area2D" parent="." groups=["Camera", "interactable"]]
visible = false
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction_hitbox"]
position = Vector2( 56, 0 )
shape = SubResource( 14 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 8 )
animation = "armor_off"
playing = true

[node name="Raycasts" type="Node2D" parent="AnimatedSprite"]

[node name="Hitbox" type="Area2D" parent="AnimatedSprite"]
visible = false
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite/Hitbox"]
position = Vector2( -4, 0 )
shape = SubResource( 9 )

[node name="Detect" type="Area2D" parent="AnimatedSprite"]
collision_layer = 256
collision_mask = 32777

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AnimatedSprite/Detect"]
polygon = PoolVector2Array( 80, -24, 1664, -1408, 1656, 1408, 80, 24 )

[node name="Detection_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Alert_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Loop_timer" type="Timer" parent="."]
wait_time = 15.0

[node name="Interaction_timer" type="Timer" parent="."]
one_shot = true

[node name="Interaction_panel" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -112.0
margin_top = -216.0
margin_right = 112.0
margin_bottom = -96.0

[node name="VBoxContainer" type="VBoxContainer" parent="Interaction_panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 217.0
margin_bottom = 113.0

[node name="Title" type="Label" parent="Interaction_panel/VBoxContainer"]
margin_right = 210.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 11 )
text = "Camera"
align = 1

[node name="Action1" type="Label" parent="Interaction_panel/VBoxContainer"]
margin_top = 50.0
margin_right = 210.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 12 )
text = "Hold [F] to Loop"
align = 1

[node name="Interaction_progress" type="ProgressBar" parent="Interaction_panel/VBoxContainer"]
margin_top = 77.0
margin_right = 210.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 13 )
step = 1.0
rounded = true

[connection signal="area_entered" from="AnimatedSprite/Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_entered" from="AnimatedSprite/Detect" to="." method="_on_Detect_area_entered"]
[connection signal="area_exited" from="AnimatedSprite/Detect" to="." method="_on_Detect_area_exited"]
[connection signal="body_entered" from="AnimatedSprite/Detect" to="." method="_on_Detect_body_entered"]
[connection signal="body_exited" from="AnimatedSprite/Detect" to="." method="_on_Detect_body_exited"]
[connection signal="timeout" from="Detection_timer" to="." method="_on_Detection_timer_timeout"]
[connection signal="timeout" from="Alert_timer" to="." method="_on_Alert_timer_timeout"]
[connection signal="timeout" from="Loop_timer" to="." method="_on_Loop_timer_timeout"]
[connection signal="timeout" from="Interaction_timer" to="." method="_on_Interaction_timer_timeout"]

[editable path="Marker"]
